[package]
name = "ring-channel"
version = "0.10.1"
edition = "2021"
authors = ["Bruno Dutra <brunocodutra@gmail.com>"]
description = "Bounded MPMC channel abstraction on top of a ring buffer"
repository = "https://github.com/brunocodutra/ring-channel.git"
license = "MIT"
readme = "README.md"
keywords = ["channel", "lock-free", "mpmc", "ring-buffer", "fifo" ]
categories = ["concurrency", "asynchronous", "no-std"]
resolver = "2"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "futures_api"]
std = ["crossbeam-queue/std", "crossbeam-utils/std", "futures/std"]
futures_api = ["futures"]

[badges]
codecov = { repository = "brunocodutra/ring-channel" }

[dependencies]
crossbeam-queue = { version = "0.3.4", default-features = false, features = ["alloc"] }
crossbeam-utils = { version = "0.8.7", default-features = false }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
futures = { version = "0.3.21", default-features = false, features = ["executor"], optional = true }

[dev-dependencies]
async-trait = "0.1.52"
criterion = "0.3.5"
futures = { version = "0.3.21", default-features = false, features = ["alloc"] }
num_cpus = "1.13.1"
proptest = "1.0.0"
smol = "1.2.5"
test-strategy = "0.1.2"

[[bench]]
name = "throughput"
harness = false

[lib]
bench = false
