[package]
name = "ring-channel"
version = "0.10.1"
edition = "2021"
authors = ["Bruno Dutra <brunocodutra@gmail.com>"]
description = "Bounded MPMC channel abstraction on top of a ring buffer"
repository = "https://github.com/brunocodutra/ring-channel.git"
license = "MIT"
readme = "README.md"
keywords = ["channel", "lock-free", "mpmc", "ring-buffer", "fifo" ]
categories = ["concurrency", "asynchronous", "no-std"]
resolver = "2"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "futures_api"]
std = ["crossbeam-utils/std", "futures/std", "slotmap/std", "spin/std"]
futures_api = ["futures", "slotmap", "spin"]

[badges]
codecov = { repository = "brunocodutra/ring-channel" }

[dependencies]
crossbeam-utils = { version = "0.8.7", default-features = false }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
futures = { version = "0.3.21", default-features = false, features = ["executor"], optional = true }
slotmap = { version = "1.0.6", optional = true, default-features = false }
spin = { version = "0.9.2", default-features = false, features = ["rwlock"], optional = true }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async_tokio"] }
futures = { version = "0.3.21", default-features = false, features = ["alloc"] }
num_cpus = "1.13.1"
proptest = "1.0.0"
test-strategy = "0.1.2"
tokio = { version = "1.16.1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }

[[bench]]
name = "throughput"
harness = false

[lib]
bench = false
